--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -1384,13 +1384,8 @@ BattleGround.PremadeGroupWaitForMatch = 1800000
 #        If automatic distribution is enabled in days
 #        Default: 7 (weekly)
 #
-#    Arena.QueueEnterAnnouncer.Enable
-#        Enable arena queue announcer posting to chat at enter
-#        Default: 0 (disable)
-#                 1 (enable)
-#
-#    Arena.QueueLeaveAnnouncer.Enable
-#        Enable arena queue announcer posting to chat at leave
+#    Arena.QueueAnnouncer.Enable
+#        Enable bg queue announcer posting to chat
 #        Default: 0 (disable)
 #                 1 (enable)
 #
@@ -1409,8 +1404,7 @@ Arena.MaxRatingDifference = 150
 Arena.RatingDiscardTimer = 600000
 Arena.AutoDistributePoints = 0
 Arena.AutoDistributeInterval = 7
-Arena.QueueEnterAnnouncer.Enable = 0
-Arena.QueueLeaveAnnouncer.Enable = 0
+Arena.QueueAnnouncer.Enable = 0
 Arena.ArenaSeason.ID = 1
 Arena.ArenaSeason.InProgress = 1
 
